Closed Bug 1639675 Opened 5 years ago Closed 5 years ago

Crash in [@ memcpy_repmovs | mozilla::layers::CanvasEventRingBuffer::ReturnWrite]

Categories

(Core :: Graphics: Canvas2D, defect, P1)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- disabled
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-52a30bf1-97f1-47a3-be86-456a50200426.

Top 10 frames of crashing thread:

0 vcruntime140.dll memcpy_repmovs d:\agent\_work\3\s\src\vctools\crt\vcruntime\src\string\amd64\memcpy.asm:114
1 xul.dll mozilla::layers::CanvasEventRingBuffer::ReturnWrite gfx/layers/CanvasDrawEventRecorder.cpp:448
2 xul.dll mozilla::layers::RecordedGetDataForSurface::PlayCanvasEvent const gfx/layers/RecordedCanvasEventImpl.h:360
3 xul.dll mozilla::layers::CanvasTranslator::HandleExtensionEvent gfx/layers/ipc/CanvasTranslator.cpp:263
4 xul.dll mozilla::layers::CanvasTranslator::TranslateRecording gfx/layers/ipc/CanvasTranslator.cpp:211
5 xul.dll mozilla::layers::CanvasTranslator::StartTranslation gfx/layers/ipc/CanvasTranslator.cpp:154
6 xul.dll mozilla::detail::RunnableMethodImpl< xpcom/threads/nsThreadUtils.h:1220
7 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:207
8 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:300
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200

Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/06c02224ce5d Check that ScopedMap successfully mapped in RecordedPrepareDataForSurface::PlayCanvasEvent. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Crash Signature: [@ memcpy_repmovs | mozilla::layers::CanvasEventRingBuffer::ReturnWrite] [@ memcpy | mozilla::layers::CanvasEventRingBuffer::ReturnWrite ] → [@ memcpy_repmovs | mozilla::layers::CanvasEventRingBuffer::ReturnWrite] [@ memcpy | mozilla::layers::CanvasEventRingBuffer::ReturnWrite ] [@ vcruntime140.dll | mozilla::layers::CanvasEventRingBuffer::ReturnWrite ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: