Bug 1639675: Check that ScopedMap successfully mapped in RecordedPrepareDataForSurface::PlayCanvasEvent. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D76210